
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DeepmindContext ;


 int dmlab_context_impl ;

__attribute__((used)) static DeepmindContext* get_context_once(void) {
  static bool have_context = 0;
  if (!have_context) {
    have_context = 1;
    return &dmlab_context_impl;
  } else {
    return ((void*)0);
  }
}
