; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_get_context_once.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dmlab_connect.c_get_context_once.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_context_once.have_context = internal global i32 0, align 4
@dmlab_context_impl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @get_context_once to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_context_once() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @get_context_once.have_context, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 1, i32* @get_context_once.have_context, align 4
  store i32* @dmlab_context_impl, i32** %1, align 8
  br label %6

5:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %6

6:                                                ; preds = %5, %4
  %7 = load i32*, i32** %1, align 8
  ret i32* %7
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
